 2002-06-10 Al Riddoch <alriddoch@zepler.org>
    -Add generated rpm spec and sort out interface versioning. Install docs.
 05/27/2002 Michael Koch <konqueror@gmx.de>
    -Add support for FreeBSD.
 05/20/2002 Ron Steinke <rsteinke@w-link.net>,
            Malcolm Walker <malcolm@worldforge.org>
    -Add code to support noblocking connect for TCP socket streams.
     Bumped version to 0.2.3.
 04/08/2002 Malcolm Walker <malcolm@worldforge.org>, 
            Martin Pollard <xmp@blueyonder.co.uk>
    -Moved code out of skstream.h and into skstream.cpp for
     basic_socket_stream constructors and methods.
    -Renamed CHANGELOG to CHANGELOG.FreeSockets to stop filename clash on
     lame filesystems
    -Added MS Visual C++ project files to VisualC directory.
 03/04/2002 Dan Tomalesky <grim@xynesis.com>
    -Added $ACLOCAL_FLAGS to aclocal call in autogen.sh
 03/02/2002 Dan Tomalesky <grim@xynesis.com>
    -Updated Makefile.am to have the various EXTRA_DIST stuff needed in the
     tar ball.
    -Fixed the includes for the tests so that they aren't installed when doing
     make install, but are in the dist file.
    -Adding TODO so that make dist is happy (nothing in it though)
    -Added acinclude.m4 with the cppunit m4 in it so that people without
     cppunit can still autogen/configure (I see your point now James :-)
    -Adding ChangeLog, NEWS, and README which are requirements for doing
     automake's make dist.  old CHANGELOG has been broken into README and
     ChangeLog.
 03/01/2002 Dan Tomalesky <grim@xynesis.com>
    -Pushed the version to 0.2.2 so that people building with 0.2.1 know that
     they don't have can_accept() in tcp_socket_server
    -changed can_accept's timeval to be all 0, so that it is just a quick
     poll and returns immediately (Thanks to alriddoch for the suggestion)
    -modified the ugly switch block I was using to print out error message
     names to use strerror (Thanks to James for that one)