@@ -1,3 +1,5 @@
+ 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
+    -Fixed many bugs in nonblocking tcp socket connect code
  2002-06-10 Al Riddoch <alriddoch@zepler.org>
     -Add generated rpm spec and sort out interface versioning. Install docs.
  05/27/2002 Michael Koch <konqueror@gmx.de>
